src/test/ui/rfc-2632-const-trait-impl/specializing-constness.stderr
error: cannot specialize on trait `Default`
  --> $DIR/specializing-constness.rs:20:9
   |
LL | impl<T: Default + Sup> A for T {
   |         ^^^^^^^

error: aborting due to previous error

